Added form validations

--- a/style.css
+++ b/style.css
@@ -83,3 +83,11 @@ img{
 .btn-primary:hover {
   background: #ac005f;
 }
+
+.ng-invalid.ng-dirty {
+  border-color: #FA787E;
+}
+
+.ng-valid.ng-dirty {
+  border-color: #78FA89;
+}
